<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_item_produto">

    <ImageView
        android:id="@+id/imgProduto"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/preco_produto"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textColor="@color/black"
        android:maxLines="2"
        android:textSize="13sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/txtFrete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frete_gratis"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="13sp" />

</LinearLayout>