<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="20dp"
    app:cardElevation="6dp">

    <ImageView
        android:id="@+id/anuncio"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image_ads02" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/linearLayout"
            app:cardCornerRadius="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imgEmpresa"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/img_quadro_02" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <TextView
                android:id="@+id/txt_diasGratis"
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/dias_gratis"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_desconto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desconto"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_nomeEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empresa"
                android:textSize="16sp"
                android:textColor="@color/white" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>